--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.11.0"
 appcompat = "1.7.1"
 coreSplashscreen = "1.0.1"
-dagger = "2.56.1"
+dagger = "2.56.2"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.2.0"
 kotlinxDatetime = "0.7.0"
@@ -51,6 +51,9 @@ hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "dag
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 simplypdf = { module = "com.github.wwdablu:SimplyPDF", version.ref = "simplypdf" }
 
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -60,3 +63,6 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
+
+# Convention plugins (build logic)
+convention-kmpModule = { id = "com.andres.notes.master.convention.kmpmodule" }
